--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,13 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
+  },
   "devDependencies": {}
 }
-
